Resolve conflict between table signature and blocks beginning with t. Now Paul Goscicki can do absurd things like putting his tel. number on his website. ;) [#74 state:resolved]

--- a/spec/fixtures/basic.yml
+++ b/spec/fixtures/basic.yml
@@ -1000,3 +1000,7 @@ html: |-
 name: code captures spaces when made explicit with square brackets
 in: "Start a paragraph with [@p. @] (that's p, a period, and a space)."
 html: "<p>Start a paragraph with <code>p. </code> (that&#8217;s p, a period, and a space).</p>"
+---
+name: unrecognized block starting with t not eaten
+in: "tel. 0 700 123 123"
+html: "<p>tel. 0 700 123 123</p>"
