--- a/spec/fixtures/basic.yml
+++ b/spec/fixtures/basic.yml
@@ -595,6 +595,10 @@ html: <p>We use <acronym title="Cascading Style Sheets"><span class="caps">CSS</
 lite_mode_html: We use <acronym title="Cascading Style Sheets"><span class="caps">CSS</span></acronym>.
 no_span_caps_html: <p>We use <acronym title="Cascading Style Sheets">CSS</acronym>.</p>
 --- 
+name: two-letter acronyms
+in: It employs AI(artificial intelligence) processing.
+html: <p>It employs <acronym title="artificial intelligence"><span class="caps">AI</span></acronym> processing.</p>
+--- 
 name: tables
 desc: Simple tables can be built by separating fields with pipe characters
 in: |-
