Fix regression where period wasn't accepted in style attribute.

--- a/spec/fixtures/basic.yml
+++ b/spec/fixtures/basic.yml
@@ -375,8 +375,8 @@ html: <p class="example1" id="big-red2">Red here</p>
 --- 
 name: css style
 desc: Style settings can be provided directly by surrounding them in curly braces.
-in: p{color:blue;margin:30px}. Spacey blue
-html: <p style="color:blue;margin:30px;">Spacey blue</p>
+in: p{color:blue;margin:30px;font-size:120%;}. Spacey blue
+html: <p style="color:blue;margin:30px;font-size:120%;">Spacey blue</p>
 --- 
 name: language designations
 desc: Language designations can be given between angel brackets.
