--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,25 @@
-ext/redcloth_scan/Makefile
-ext/redcloth_scan/extconf.rb
-ext/redcloth_scan/*.[co]
+*.log
+*.rbc
+*.sw?
+.bundle
+.DS_Store
+coverage
+doc/rdoc/*
 ext/redcloth_scan/*.bundle
-ext/redcloth_scan/*.so
-ext/redcloth_scan/*.jar
 ext/redcloth_scan/*.class
+ext/redcloth_scan/*.jar
 ext/redcloth_scan/*.java
+ext/redcloth_scan/*.so
+ext/redcloth_scan/*.[co]
+ext/redcloth_scan/extconf.rb
+ext/redcloth_scan/Makefile
 ext/redcloth_scan/redcloth_*.rb
 lib/*.bundle
-lib/*.so
 lib/*.jar
+lib/*.so
+lib/**/*.so
 lib/redcloth_scan.rb
-doc/rdoc/*
-tmp/*
-pkg/*
-.DS_Store
-*.log
+pkg
+rdoc
+release
+tmp
