Have spaces around the en-dash in LaTeX

--- a/lib/redcloth/formatters/latex_entities.yml
+++ b/lib/redcloth/formatters/latex_entities.yml
@@ -28,9 +28,9 @@ mdash: ---
 #EM DASH
 "8212": ---
 #EN DASH
-ndash: --
+ndash: ' -- '
 #EN DASH
-"8211": --
+"8211": ' -- '
 #HYPHEN
 "8208": "-"
 #OPEN BOX
