--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,26 @@
 language: ruby
+cache: bundler
+sudo: false
 rvm:
   - 2.0.0
   - 1.9.3
   - 1.9.2
   - jruby-18mode
   - jruby-19mode
-  - rbx-2.1.1
+  - rbx-2
   - ruby-head
   - jruby-head
   - 1.8.7
   - ree
+matrix:
+  fast_finish: true
+  allow_failures:
+    - rvm: jruby-18mode
+    - rvm: jruby-19mode
+    - rvm: jruby-head
 compiler:
   - clang
   - gcc
 before_script:
-  - rake clobber
+  - bundle update
+  - bundle exec rake clobber
