--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: ruby
 rvm:
+  - 2.3.0
+  - 2.2
+  - 2.1
   - 2.0.0
   - 1.9.3
   - 1.9.2
   - jruby-18mode
   - jruby-19mode
-  - rbx-2.1.1
+  - rbx-2.5.8
   - ruby-head
   - jruby-head
   - 1.8.7
@@ -13,5 +16,13 @@ rvm:
 compiler:
   - clang
   - gcc
+before_install:
+  - gem install bundler
 before_script:
-  - rake clobber
+  - bundle exec rake clobber
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - rvm: ruby-head
+    - rvm: jruby-head
