--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,25 +18,13 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-20.04, ubuntu-22.04, macos-12, macos-13, windows-2022 ]
-        ruby: [ 2.4, 2.5, 2.6, 2.7, '3.0', 3.1, 3.2, 3.3, head ]
+        ruby: [ '3.0', 3.1, 3.2, 3.3, head ]
         include:
           - { os: windows-2022 , ruby: ucrt  }
           - { os: windows-2022 , ruby: mswin }
-          - { os: ubuntu-20.04 , ruby: 2.2   }
-          - { os: ubuntu-20.04 , ruby: 2.3   }
-          - { os: macos-12     , ruby: 2.2   }
-          - { os: macos-12     , ruby: 2.3   }
         exclude:
-          - { os: ubuntu-22.04 , ruby: 2.4   }
-          - { os: ubuntu-22.04 , ruby: 2.5   }
-          - { os: ubuntu-22.04 , ruby: 2.6   }
-          - { os: ubuntu-22.04 , ruby: 2.7   }
           - { os: ubuntu-22.04 , ruby: 3.0   }
-          - { os: macos-12     , ruby: 2.5   }
-          - { os: macos-12     , ruby: 2.7   }
           - { os: macos-12     , ruby: 3.1   }
-          - { os: macos-13     , ruby: 2.4   }
-          - { os: macos-13     , ruby: 2.6   }
           - { os: macos-13     , ruby: '3.0' }
           - { os: windows-2022 , ruby: head  }
 
